<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="address_hint">Address</string>
    <string name="auto">Auto</string>
    <string name="hardware">Hardware</string>
    <string name="other">Other</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="add_btn_text">Add</string>
    <string name="update">Update</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="generate_pdf">generate PDF</string>
    <string name="delete_all">Delete All</string>
</resources>