<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:windowSoftInputMode = "adjustPan"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/date_format"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:windowSoftInputMode = "adjustPan"
            />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="@+id/dateEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dateEditText"
            app:layout_constraintTop_toBottomOf="@+id/dateEditText"
            android:windowSoftInputMode = "adjustPan"
            />

        <EditText
            android:id="@+id/costEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="Cost"
            android:inputType="numberDecimal"
            android:textColorHint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="@+id/addressEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/addressEditText"
            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
            tools:ignore="TouchTargetSizeCheck"
            android:windowSoftInputMode = "adjustPan"
            />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="@+id/costEditText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/costEditText"
            app:layout_constraintTop_toBottomOf="@+id/costEditText"
            android:windowSoftInputMode = "adjustPan"
            />

        <RadioGroup
            android:id="@+id/categoryRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"
            app:layout_constraintStart_toStartOf="@+id/descriptionEditText"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText">

            <RadioButton
                android:id="@+id/autoRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto" />

            <RadioButton
                android:id="@+id/hardwareRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hardware" />

            <RadioButton
                android:id="@+id/otherRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/addBtn"
            app:layout_constraintStart_toStartOf="@+id/categoryRadioGroup" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/categoryRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/categoryRadioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
